NIFI-15151 Refactored Processor Tests using Shared Database Service
- Added AbstractDatabaseConnectionServiceTest with lifecycle handling